--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "immutable": "3.8.2",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
     "react-is": ">= 16.8.0",
+    "react-redux": "7.2.0",
     "react-router-dom": "^5.1.2",
+    "redux": "4.0.5",
+    "redux-form": "8.3.1",
+    "redux-form-website-template": "1.0.13",
     "styled-components": "^5.0.1"
   },
   "scripts": {
